Fix small typo on website (#11)

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </p>
 
         <!-- Under the Hood Section -->
-        <h2>A PEAK UNDER THE HOOD</h2>
+        <h2>A PEEK UNDER THE HOOD</h2>
         
         <div class="code-block">
             <pre><span style="opacity: 0.5">// The entire trick:</span>
